--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,8 @@
 }
 */
 
+/* ====================== main page hero button ====================== */
+
 /* Button text style */
 .button-text
 {
@@ -126,7 +128,7 @@
     /* display: flex; */
     /* align-items: center; */
     letter-spacing: 0.04em; 
-    color: var(--dark-color);
+    color: var(--primary-brand-color);
 }
 
 /* Hero-button text style */
@@ -143,6 +145,7 @@
     letter-spacing: 0.04em; 
     color: var(--hero-text-color);
     background-color: var(--primary-brand-color);
+    border: none;
 }
 /* ====================== logo ====================== */
 .logo-web
@@ -202,7 +205,7 @@
     font-family: 'roboto', sans-serif;
 }
 
-/* ====================== Colors ====================== */
+/* ====================== BG section Colors ====================== */
 /* Page header style */
 .bg-color-h-f
 {
@@ -227,7 +230,7 @@
     text-decoration: none;
     list-style: none;
 }
-/* ====================== Navigation ====================== */
+/* ====================== Site Navigation ====================== */
 
 .site-nav .link:hover,
 .site-nav .link:focus 
@@ -239,4 +242,22 @@
 .site-nav .carrent
 {
     color: green;
+}
+
+/* ====================== Portfolio button menu navigation ====================== */
+
+.button-nav
+{
+    color: var(--primary-brand-color);
+    background-color: var(--light-colors);
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+}
+
+.button-nav:hover,
+.button-nav:focus 
+{
+    color: var(--hero-text-color);
+    background-color: var(--pressed-state-color);
+    border: none;
 }
