--- a/css/styles.css
+++ b/css/styles.css
@@ -11,137 +11,84 @@
     --subtle-text-color: #8E8F99;
     --accent-color: #E7E9FC;
     --light-colors: #F4F4FD;
-    /* --modal-overlay-colors: background: rgba(46, 47, 66, 0.4); */
-    /* --hero-background-color: background: rgba(46, 47, 66, 0.7); */
+    
 }
 
+/* ====================== Body global stylea ====================== */
+body {
+    font-family: 'roboto', sans-serif;
+    color: var(--dark-color);
+}
 
 /* ====================== Text Guide ====================== */
 
 /* Global main paramrters for text */
-.main-text-style 
-{
+.main-text-style {
     font-style: normal;
     letter-spacing: 0.02em;
-    /* color: var(--dark-color); */
-    }
+}
 
 /* H1 style */
-.title-first 
-{
-    
-    font-weight: 700;
+.title-first {
     font-size: 56px;
-    /* line-height: 60px; */
     line-height: 1.15;    
     color: var(--hero-text-color);
 }
 
 /* H2 style */
-.title-second
-{
-    
-    font-weight: 700;
+.title-second {
     font-size: 36px;
     line-height: 1.11;
-    text-transform: capitalize; 
-    /* color: var(--dark-color); */
+    text-transform: capitalize;   
 }
 
 /* H3 style */
-.title-third
-{
+.title-third {
     font-weight: 500;
     font-size: 20px;
-    /* line-height: 24px; */
     line-height: 1.2;
-    /* color: var(--dark-color); */
 }
 
 /* Body text style */
-.small-text
-{
-    font-weight: 400;
+.small-text {
+    
     font-size: 16px;
-    /* line-height: 24px; */
     line-height: 1.5;
     color: var(--text-color);
 }
 
 /* Body text style */
-.medium-text
-{
+.medium-text {
     font-weight: 500;
     font-size: 16px;
-    /* line-height: 24px; */
     line-height: 1.5;
-    /* color: var(--dark-color); */
 }
 
-/* Adress text 
-.adress-text
-{
-    font-weight: 400;
-    font-size: 16px;
-    
-    line-height: 1.5;
-    color: var(--text-color);
-} */
-
-
 /* Footer text */
-.footer-text
-{
-    font-weight: 400;
+.footer-text {
+    
     font-size: 16px;
-    /* line-height: 24px; */
     line-height: 1.5;
     color: var(--accent-color);
 }
 
-/* Small text style 
-.smal-text-second
-{
-    font-weight: 400;
-    font-size: 12px;
-   
-    line-height: 1.33;
-    
-
-    
-    align-items: center;
-    letter-spacing: 0.04em; 
-}
-*/
-
 /* ====================== main page hero button ====================== */
 
 /* Button text style */
-.button-text
-{
+.button-text {
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    /* line-height: 24px; */
     line-height: 1.5;
-    /* identical to box height, or 150% */
-
-    /* display: flex; */
-    /* align-items: center; */
     letter-spacing: 0.04em; 
     color: var(--primary-brand-color);
 }
 
 /* Hero-button text style */
-.hero-button
-{
+.hero-button {
     font-weight: 500;
     font-size: 16px;
-    /* line-height: 24px; */
     line-height: 1.5;
-    /* identical to box height, or 150% */
-
-    /* display: flex; */
-    /* align-items: center; */
     letter-spacing: 0.04em; 
     color: var(--hero-text-color);
     background-color: var(--primary-brand-color);
@@ -149,79 +96,52 @@
     cursor: pointer;
 }
 /* ====================== logo ====================== */
-.logo-web
-{
+.logo-web {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    /* line-height: 24px; */
     line-height: 1.33;
-    /* identical to box height, or 133% */
-
-    /* display: flex; */
-    /* align-items: center; */
-    /* letter-spacing: 0.03em; */
-    /* text-transform: uppercase; */
     color: var(--primary-brand-color); 
+    text-transform: uppercase;
 }
 
-.logo-studio-h
-{
+.logo-studio-h {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    /* line-height: 24px; */
     line-height: 1.33;
-    /* identical to box height, or 133% */
-
-    /* display: flex; */
-    /* align-items: center; */
-    /* letter-spacing: 0.03em; */
-    /* text-transform: uppercase; */
     color: var(--dark-color);
+    text-transform: uppercase;
 }
 
-.logo-studio-f
-{
+.logo-studio-f {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    /* line-height: 24px; */
     line-height: 1.33;
-    /* identical to box height, or 133% */
-
-    /* display: flex; */
-    /* align-items: center; */
-    /* letter-spacing: 0.03em; */
-    /* text-transform: uppercase; */
     color: var(--light-colors);
+    text-transform: uppercase;
 }
 
 
 /* ====================== BG section Colors ====================== */
 /* Page header style */
-.bg-color-h-f
-{
+.bg-color-h-f {
     background-color: var(--dark-color);
 }
 
 /* BG section Our Team */
-.our-team-colors-bg
-{
+.our-team-colors-bg {
     background-color: var(--light-colors);
 }
-/* ul 
-{
-    list-style: none;
-} */
+
 
 /* ====================== Link ====================== */
 /* Link style */
-.link
-{
+.link {
     font-style: normal;
     text-decoration: none;
     list-style: none;
@@ -229,53 +149,38 @@
 /* ====================== Site Navigation ====================== */
 
 .site-nav .link:hover,
-.site-nav .link:focus 
-{
-    color: var(--titel-text-color);
+.site-nav .link:focus {
+    color: var(--dark-color);
 }
 
 /* A highlighted link to the active page */
-.site-nav .carrent
-{
+.site-nav .carrent {
     color: green;
 }
 
 /* ====================== Adress Activation ====================== */
 
 .adress-nav .link:hover,
-.adress-nav .link:focus 
-{
+.adress-nav .link:focus {
     color: var(--primary-brand-color);
 }
 
 /* ====================== Portfolio button menu navigation ====================== */
 
-.button-nav
-{
+.button-nav {
     color: var(--primary-brand-color);
     background-color: var(--light-colors);
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     cursor: pointer;
+    font-family: 'Roboto', sans-serif;
 }
 
 .button-nav:hover,
-.button-nav:focus 
-{
+.button-nav:focus {
     color: var(--hero-text-color);
     background-color: var(--pressed-state-color);
     border: none;
 }
 
-/* ====================== Body global stylea ====================== */
-body
-{
-    font-family: 'roboto', sans-serif;
-    color: var(--dark-color);
-}
-/* ====================== Global text styles ====================== */
-/* .page
-{
-    
-    font-family: 'roboto', sans-serif;
-} */
+
